fix:: fix main section overflow problem

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,20 @@
     background-color: theme(colors.magnolia);
   }
 }
+
+@layer components {
+  .floating {
+    height: calc(100vh - 160px);
+  }
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
